# fastapi-template

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  renovate.json
.github/workflows/: ci.yaml  lint-pr-title.yaml  release.yaml
src/: app.py
tests/: test_app.py
