[tool.poetry]
name = "fastapi-template"
version = "1.0.0"
description = ""
authors = ["Armand Sauzay <sauzayarmand@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {extras = ["standard"], version = "0.110.0"}
uvicorn = {extras = ["standard"], version = "0.28.0"}


[tool.poetry.group.test.dependencies]
pytest = "8.0.2"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
